--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
     <p>We have been providing world class facilities at our campus</p>
     <div class="row">
         <div class="campus-col">
-            <img src="Pic/Campus.jpeg">
+            <img src="Campus.jpeg">
         <div class="layer">
             <h3>Italy</h3>
         </div>
         </div>
         <div class="campus-col">
-            <img src="Pic/Campus1.jpg">
+            <img src="Campus1.jpg">
         <div class="layer">
             <h3>France</h3>
         </div>
         </div>
         <div class="campus-col">
-            <img src="Pic/Campus2.jpg">
+            <img src="Campus2.jpg">
         <div class="layer">
             <h3>Rome</h3>
         </div>
@@ -95,17 +95,17 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="Pic/classroom.jpeg">
+            <img src="classroom.jpeg">
             <h3>Huge classroom</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
         <div class="facilities-col">
-            <img src="Pic/Hall.jpeg">
+            <img src="Hall.jpeg">
             <h3>Special Halls</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
         <div class="facilities-col">
-            <img src="Pic/library.jpeg">
+            <img src="library.jpeg">
             <h3>World class Library</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
