--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="pic/logo.jpeg"></a>
+            <a href="index.html"><img src="https://github.com/an03singh/Mywebsite/blob/main/logo.jpeg?raw=true"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
               <ul>
@@ -69,19 +69,19 @@
     <p>We have been providing world class facilities at our campus</p>
     <div class="row">
         <div class="campus-col">
-            <img src="Campus.jpeg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/Campus.jpeg?raw=true">
         <div class="layer">
             <h3>Italy</h3>
         </div>
         </div>
         <div class="campus-col">
-            <img src="Campus1.jpg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/Campus1.jpg?raw=true">
         <div class="layer">
             <h3>France</h3>
         </div>
         </div>
         <div class="campus-col">
-            <img src="Campus2.jpg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/Campus2.jpg?raw=true">
         <div class="layer">
             <h3>Rome</h3>
         </div>
@@ -95,17 +95,17 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="classroom.jpeg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/classroom.jpeg?raw=true">
             <h3>Huge classroom</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
         <div class="facilities-col">
-            <img src="Hall.jpeg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/Hall.jpeg?raw=true">
             <h3>Special Halls</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
         <div class="facilities-col">
-            <img src="library.jpeg">
+            <img src="https://github.com/an03singh/Mywebsite/blob/main/library.jpeg?raw=true">
             <h3>World class Library</h3>
             <p>We have been providing world class facilities at our campus</p>
         </div>
